# CUDA-SGEMM-Optimization

./: .gitignore  CMakeLists.txt  Makefile  README.md  layernorm  softmax
bench/: bench_fused.py  bench_sgemm.py  plot.py
colab/: run.ipynb
docs/: optimization_notes.md
results/: fused_results.csv  sgemm_profile.txt  sgemm_results.csv
src/fused/: layernorm.cu  softmax.cu
src/sgemm/: kernels.cuh  sgemm.cu
tests/: verify.py
